[package]
name = "hmm-rs"
version = "0.0.2"
edition = "2021"
authors = ["ninjamuffin99"]
description = "Managing haxelibs via Haxe Module Manager, in Rust 🦀"
repository = "https://github.com/ninjamuffin99/hmm-rs"
keywords = ["haxe", "haxelib", "hmm"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bstr = "1.9.1"
clap = { version = "4.5.4", features = ["derive", "unicode", "wrap_help"] }
console = "0.15.8"
error-chain = "0.12.4"
futures = "0.3.30"
futures-util = "0.3.30"
gix = { version = "0.61.0", default-features = false, features = [
    "revision",
    "index",
    "blocking-network-client",
    "worktree-mutation",
    "blocking-http-transport-curl",
] }
human_bytes = "0.4.3"
indicatif = "0.17.8"
reqwest = { version = "0.12.2", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
yansi = "1.0.1"
zip = "0.6.6"

[[bin]]
name = "hmm-rs"

[profile.release]
strip = true
lto = true
