[package]
name = "hmm-rs"
version = "0.0.2"
edition = "2021"
authors = ["ninjamuffin99"]
description = "Managing haxelibs via Haxe Module Manager, in Rust 🦀"
repository = "https://github.com/ninjamuffin99/hmm-rs"
keywords = ["haxe", "haxelib", "hmm"]
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bstr = "1.9.1"
clap = { version = "4.5.20", features = ["derive", "unicode", "wrap_help"] }
console = "0.15.8"
error-chain = "0.12.4"
futures = "0.3.30"
futures-util = "0.3.30"
gix = { version = "0.67.0", default-features = false, features = [
    "revision",
    "index",
    "blocking-network-client",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
    "status",
    "parallel-walkdir",
    "zlib-ng",
    "serde",
    "max-performance",
] }
haxeformat = "0.2.3"
human_bytes = "0.4.3"
indicatif = "0.17.8"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tempfile = "3.13.0"
thiserror = "2.0.3"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.3"
yansi = "1.0.1"
zip = "2.1.3"

[[bin]]
name = "hmm-rs"

[profile.release]
strip = true
lto = true
